--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
+  "plugins": ["unused-imports"],
   "rules": {
     "prefer-const": "error",
     "no-console": "warn" 
+    "unused-imports/no-unused-imports": "warn"
   }
 }
