--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,14 @@
   "plugins": ["unused-imports"],
   "rules": {
     "prefer-const": "error",
-    "unused-imports/no-unused-imports": "warn"
+    "unused-imports/no-unused-imports": "warn",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ]
   }
 }
