--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -6,8 +6,8 @@ services:
     environment:
       POSTGRES_USER: postgres # Set your PostgreSQL username
       POSTGRES_PASSWORD: postgres # Set your PostgreSQL password
-      POSTGRES_DB: multi-tenant-rbac # Set your default database name
+      POSTGRES_DB: computer-repair-shop # Set your default database name
     volumes:
       - .dbdata:/var/lib/postgresql/data # Persist data in a volume on cwd
     ports:
-      - "5432:5432" # Expose PostgreSQL on port 5432
+      - '5432:5432' # Expose PostgreSQL on port 5432
